--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lv-server": "Connection.js"
   },
   "dependencies": {
-    "co-util": "^0.1.17"
+    "co-util": "^0.1.17",
+    "level-ttl": "^3.1.1",
+    "leveldown": "^1.5.0",
+    "levelup": "^1.3.3"
   },
   "devDependencies": {},
   "scripts": {
