--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lv-server": "Connection.js"
   },
   "dependencies": {
-    "co-util": "^0.1.17",
-    "level-ttl": "^3.1.1",
+    "co-util": "^0.1.19",
     "leveldown": "^1.5.0",
     "levelup": "^1.3.3"
   },
@@ -22,7 +21,7 @@
   },
   "keywords": [
     "level",
-    "leveled",
+    "leveldb",
     "nodejs"
   ],
   "author": "codeorg.com",
